--- a/src/components/Message/styles.css
+++ b/src/components/Message/styles.css
@@ -22,3 +22,21 @@
   bottom: 0;
   right: 0;
 }
+
+.message__sender {
+  margin-left: auto;
+}
+
+.message__sender > .message__photo {
+  order: 1;
+  margin: 15px;
+}
+
+.message__photo {
+  order: 0;
+}
+
+.message__sender > p {
+  background-color: #3cabfa;
+  color: white;
+}
