--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
 * {
   margin: 0;
+  font-family: 'Roboto'
 }
+
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
